syntax = "proto3";

package user;

option go_package = "github.com/calmato/gran-book/api/service/proto/user";

import "user/common.proto";

// Auth - ログインユーザ情報
message Auth {
  string id = 1; // ユーザーID
  string username = 2; // ユーザー名
  Gender gender = 3; // 性別
  string email = 4; // メールアドレス
  string phone_number = 5; // 電話番号
  Role role = 6; // ユーザー権限
  string thumbnail_url = 7; // サムネイルURL
  string self_introduction = 8; // 自己紹介
  string last_name = 9; // 姓
  string first_name = 10; // 名
  string last_name_kana = 11; // 姓(かな)
  string first_name_kana = 12; // 名(かな)
  string postal_code = 13; // 郵便番号
  string prefecture = 14; // 都道府県
  string city = 15; // 市区町村
  string address_line1 = 16; // 町名,番地
  string address_line2 = 17; // マンション・ビル名,号室
  string created_at = 18; // 作成日時
  string updated_at = 19; // 更新日時
}
