syntax = "proto3";

package native;

option go_package = "github.com/calmato/gran-book/proto";

message Empty {}

message ErrorResponse {
  int64 status = 1; // ステータスコード
  int64 code = 2; // エラーコード
  string message = 3; // エラー概要
  string detail = 4; // エラー詳細
}

// Search - 検索フィールド
message Search {
  string field = 1; // フィールド名
  string value = 2; // 検索値
}

// Order - ソートフィールド
message Order {
  string field = 1; // フィールド名
  OrderBy order_by = 2; // ソート順
}

// OrderBy - ソート順
enum OrderBy {
  ORDER_BY_ASC = 0; // 昇順
  ORDER_BY_DESC = 1; // 降順
}

// Gender - 性別
enum Gender {
  GENDER_UNKNOWN = 0; // 未選択
  GENDER_MAN = 1; // 男性
  GENDER_WOMAN = 2; // 女性
}

// Role - ユーザー権限
enum Role {
  ROLE_USER = 0; // ユーザー (default)
  ROLE_ADMIN = 1; // 管理者
  ROLE_DEVELOPER = 2; // 開発者
  ROLE_OPERATOR = 3; // 運用者
}

// BookshelfStatus - 読書ステータス
enum BookshelfStatus {
  BOOKSHELF_STATUS_NONE = 0; // 不明なステータス
  BOOKSHELF_STATUS_READ = 1; // 読み終えた本
  BOOKSHELF_STATUS_READING = 2; // 読んでいる本
  BOOKSHELF_STATUS_STACKED = 3; // 積読本
  BOOKSHELF_STATUS_WANT = 4; // 読みたい本
  BOOKSHELF_STATUS_RELEASE = 5; // 手放したい本
}
